--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      issues: write  # Add this line
+      pull-requests: write  # Optionally add this
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
