--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -89,23 +89,23 @@ jobs:
           
           
       - name: Comment on PR with Report Link
-        if: steps.get_changed_files.outputs.changed == 'true'
+        if: steps.get_changed_files.outputs.changed == 'true' && github.event_name == 'pull_request'
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const prNumber = ${{ github.event.pull_request.number }};
+            const prNumber = context.payload.pull_request.number;
             const repo = context.repo.repo;
             const owner = context.repo.owner;
             const reportUrl = `https://${owner}.github.io/${repo}/reports/pr-${prNumber}/`;
-
-            github.rest.issues.createComment({
-              issue_number: prNumber,
+      
+            await github.rest.issues.createComment({
               owner: owner,
               repo: repo,
+              issue_number: prNumber,
               body: `🚀 BPMN validation report is available [here](${reportUrl}).`
             });
-
+            
       - name: No BPMN files changed
         if: steps.get_changed_files.outputs.changed != 'true'
         run: echo "No BPMN files were changed in this PR."
